--- a/src/SetListr.Avalonia/Views/MainWindow.axaml
+++ b/src/SetListr.Avalonia/Views/MainWindow.axaml
@@ -1,6 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="using:SetListr.Avalonia.ViewModels"
+        xmlns:ui="using:FluentAvalonia.UI.Controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -15,6 +16,24 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Grid ColumnDefinition="*">
+        <ui:NavigationView
+            Grid.Row="0"
+            Name="NavigateView"
+            IsPaneToggleButtonVisible="True"
+            IsSettingsVisible="True"
+            PaneDisplayMode="LeftCompact">
+
+            <ui:NavigationView.MenuItems>
+
+                <ui:NavigationViewItem Content="Home" />
+                <ui:NavigationViewItem Content="Songs" />
+                <ui:NavigationViewItem Content="Setlists" />
+                
+            </ui:NavigationView.MenuItems>
+
+        </ui:NavigationView>
+
+    </Grid>
 
 </Window>
