--- a/src/SetListr.Avalonia/App.axaml
+++ b/src/SetListr.Avalonia/App.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="SetListr.Avalonia.App"
              xmlns:local="using:SetListr.Avalonia"
+             xmlns:sty="using:FluentAvalonia.Styling"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
@@ -10,6 +11,6 @@
     </Application.DataTemplates>
   
     <Application.Styles>
-        <FluentTheme />
+        <!--<sty:FluentAvaloniaTheme Mode="Dark" />-->
     </Application.Styles>
 </Application>
