--- a/src/SetListr.Razor/Shared/MainLayout.razor
+++ b/src/SetListr.Razor/Shared/MainLayout.razor
@@ -7,15 +7,15 @@
   </FluentHeader>
   <FluentStack Orientation="Orientation.Horizontal" Width="100%">
     <FluentNavMenu Collapsible="true" Width="260" ExpandedChanged="NavMenuExpansionChanged">
-      <FluentNavLink Href="/" Icon="@(new Microsoft.FluentUI.AspNetCore.Components.Icons.Regular.Size20.Home())" IconColor="Color.Accent">
+      <FluentNavLink Href="" Icon="@(new Microsoft.FluentUI.AspNetCore.Components.Icons.Regular.Size20.Home())" IconColor="Color.Accent">
         Home
       </FluentNavLink>
 
-      <FluentNavLink Href="/songs" Icon="@(new Microsoft.FluentUI.AspNetCore.Components.Icons.Regular.Size20.MusicNote2())" IconColor="Color.Accent">
+      <FluentNavLink Href="songs" Icon="@(new Microsoft.FluentUI.AspNetCore.Components.Icons.Regular.Size20.MusicNote2())" IconColor="Color.Accent">
         Songs
       </FluentNavLink>
 
-      <FluentNavLink Href="/setlists" Icon="@(new Microsoft.FluentUI.AspNetCore.Components.Icons.Regular.Size20.List())" IconColor="Color.Accent">
+      <FluentNavLink Href="setlists" Icon="@(new Microsoft.FluentUI.AspNetCore.Components.Icons.Regular.Size20.List())" IconColor="Color.Accent">
         Setlists
       </FluentNavLink>
 
