--- a/src/SetListr.Razor/Pages/Setlists.razor
+++ b/src/SetListr.Razor/Pages/Setlists.razor
@@ -4,7 +4,7 @@
 
 <h3>Setlists</h3>
 <br />
-<FluentButton @onclick="@(() => Navigation.NavigateTo("/setlists/edit"))">Add Setlist</FluentButton>
+<FluentButton @onclick="@(() => Navigation.NavigateTo("setlists/edit"))">Add Setlist</FluentButton>
 
 <FluentDataGrid Items="_setLists"
                 Pagination="@_pagination"
